setting title & body by .env

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,6 @@ TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
 DOMAIN="sample.atlassian.net"
 SPACE="sample"
 PAGE="12345678"
+
+TITLE="sample"
+BODY="<h2>日報</h2><h2>共有事項</h2><h2>相談事項</h2><h2>その他</h2>"
