rename before merge environment variable

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
-USER="sample@sample.co.jp"
-TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
+CONFLUENCE_USER="sample@sample.co.jp"
+CONFLUENCE_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
 
-DOMAIN="sample.atlassian.net"
-SPACE="sample"
-PAGE="12345678"
+CONFLUENCE_DOMAIN="sample.atlassian.net"
+CONFLUENCE_SPACE="sample"
+CONFLUENCE_PAGE="12345678"
 
-TITLE="sample"
-BODY="<h2>日報</h2><h2>共有事項</h2><h2>相談事項</h2><h2>その他</h2>"
+CONFLUENCE_TITLE="sample"
+CONFLUENCE_BODY="<h2>日報</h2><h2>共有事項</h2><h2>相談事項</h2><h2>その他</h2>"
