--- a/.github/workflows/daily-meeting-report.yml
+++ b/.github/workflows/daily-meeting-report.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - run: yarn install
-    - run: yarn create-page-from-last
+    - run: bin/create-page-from-last
       env:
         CONFLUENCE_USER: ${{ secrets.CONFLUENCE_USER }}
         CONFLUENCE_TOKEN: ${{ secrets.CONFLUENCE_TOKEN }}
