feat: notify to slack

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ CONFLUENCE_SPACE="sample"
 CONFLUENCE_PAGE="12345678"
 
 CONFLUENCE_TITLE="sample"
+
+SLACK_WEBHOOK_URL="https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
