--- a/.github/workflows/create-daily-meeting-report.yml
+++ b/.github/workflows/create-daily-meeting-report.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: yarn install
+      - run: yarn install --production
       - run: bin/create-page-from-last
         env:
           CONFLUENCE_USER: ${{ secrets.CONFLUENCE_USER }}
