--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "moment": "^2.27.0"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2"
   }
 }
